# primes-sieve-rust

./: .gitignore  Cargo.toml
examples/: main.rs
src/: conversions.rs  helper.rs  lib.rs  main.rs
tests/: main.rs
