[package]
name = "primes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1"

# https://github.com/rust-lang/rust/issues/47745
[profile.release]
lto = true
codegen-units = 1

[dev-dependencies]
inquire = "*"
quickcheck = "1"
quickcheck_macros = "1"
